// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`app/hub/Views/SetupView container Snapshot tests with react-test-renderer setup view container is rendered correctly on the Anti-Suite step 1`] = `
<div
  className="full-height"
>
  <div
    className="Modal"
  >
    <div>
      <div
        className="Modal__background"
        onClick={undefined}
      />
      <div
        className="Modal__container flex-container align-center-middle"
      >
        <div
          className="SetupModal__content flex-container flex-dir-column align-middle"
        >
          <div
            className="SetupModal__image"
          />
          <div
            className="SetupModal__text flex-child-grow"
          >
            hub_setup_enter_modal_text
          </div>
          <div
            className="SetupModal__buttonContainer full-width"
          >
            <div
              className="full-width flex-container align-justify"
            >
              <a
                aria-current="page"
                className="button success hollow active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                hub_setup_modal_button_no
              </a>
              <div
                className="button success hollow"
                onClick={[Function]}
              >
                hub_setup_modal_button_yes
              </div>
            </div>
            <div
              className="flex-container align-center-middle"
            >
              <div
                className="ToggleCheckbox"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <div
                className="SetupModal__checkboxText"
                onClick={[Function]}
              >
                hub_setup_modal_button_ask_again
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="full-height flex-container flex-dir-column"
  >
    <div
      className="flex-child-grow"
    >
      <div>
        <div
          className="row align-center"
        >
          <div
            className="columns small-12 large-10"
          >
            <div
              className="SetupHeader flex-container align-center-middle"
            >
              <img
                src="/app/images/hub/setup/ghosty-shield-stop-lightbulb.svg"
              />
              <div
                className="SetupHeader__title"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "hub_setup_header_title_antisuite",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          Mock Setup Anti-Suite View
        </div>
      </div>
    </div>
    <div>
      Mock Setup Navigation
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/SetupView container Snapshot tests with react-test-renderer setup view container is rendered correctly on the Blocking step 1`] = `
<div
  className="full-height"
>
  <div
    className="Modal"
  >
    <div>
      <div
        className="Modal__background"
        onClick={undefined}
      />
      <div
        className="Modal__container flex-container align-center-middle"
      >
        <div
          className="SetupModal__content flex-container flex-dir-column align-middle"
        >
          <div
            className="SetupModal__image"
          />
          <div
            className="SetupModal__text flex-child-grow"
          >
            hub_setup_enter_modal_text
          </div>
          <div
            className="SetupModal__buttonContainer full-width"
          >
            <div
              className="full-width flex-container align-justify"
            >
              <a
                aria-current="page"
                className="button success hollow active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                hub_setup_modal_button_no
              </a>
              <div
                className="button success hollow"
                onClick={[Function]}
              >
                hub_setup_modal_button_yes
              </div>
            </div>
            <div
              className="flex-container align-center-middle"
            >
              <div
                className="ToggleCheckbox"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <div
                className="SetupModal__checkboxText"
                onClick={[Function]}
              >
                hub_setup_modal_button_ask_again
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="full-height flex-container flex-dir-column"
  >
    <div
      className="flex-child-grow"
    >
      <div>
        <div
          className="row align-center"
        >
          <div
            className="columns small-12 large-10"
          >
            <div
              className="SetupHeader flex-container align-center-middle"
            >
              <img
                src="/app/images/hub/setup/ghosty-block-all.svg"
              />
              <div
                className="SetupHeader__title"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "hub_setup_header_title_blocking",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          Mock Setup Blocking View
        </div>
      </div>
    </div>
    <div>
      Mock Setup Navigation
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/SetupView container Snapshot tests with react-test-renderer setup view container is rendered correctly on the Done step 1`] = `
<div
  className="full-height"
>
  <div
    className="Modal"
  >
    <div>
      <div
        className="Modal__background"
        onClick={undefined}
      />
      <div
        className="Modal__container flex-container align-center-middle"
      >
        <div
          className="SetupModal__content flex-container flex-dir-column align-middle"
        >
          <div
            className="SetupModal__image"
          />
          <div
            className="SetupModal__text flex-child-grow"
          >
            hub_setup_enter_modal_text
          </div>
          <div
            className="SetupModal__buttonContainer full-width"
          >
            <div
              className="full-width flex-container align-justify"
            >
              <a
                aria-current="page"
                className="button success hollow active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                hub_setup_modal_button_no
              </a>
              <div
                className="button success hollow"
                onClick={[Function]}
              >
                hub_setup_modal_button_yes
              </div>
            </div>
            <div
              className="flex-container align-center-middle"
            >
              <div
                className="ToggleCheckbox"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <div
                className="SetupModal__checkboxText"
                onClick={[Function]}
              >
                hub_setup_modal_button_ask_again
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="full-height flex-container flex-dir-column"
  >
    <div
      className="flex-child-grow"
    >
      <div>
        <div
          className="row align-center"
        >
          <div
            className="columns small-12 large-10"
          >
            <div
              className="SetupHeader flex-container align-center-middle"
            >
              <img
                src="/app/images/hub/setup/ghosty-check-wrench.svg"
              />
              <div
                className="SetupHeader__title"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "hub_setup_header_title_done",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          Mock Setup Done View
        </div>
      </div>
    </div>
    <div>
      Mock Setup Navigation
    </div>
  </div>
</div>
`;

exports[`app/hub/Views/SetupView container Snapshot tests with react-test-renderer setup view container is rendered correctly on the Human Web step 1`] = `
<div
  className="full-height"
>
  <div
    className="Modal"
  >
    <div>
      <div
        className="Modal__background"
        onClick={undefined}
      />
      <div
        className="Modal__container flex-container align-center-middle"
      >
        <div
          className="SetupModal__content flex-container flex-dir-column align-middle"
        >
          <div
            className="SetupModal__image"
          />
          <div
            className="SetupModal__text flex-child-grow"
          >
            hub_setup_enter_modal_text
          </div>
          <div
            className="SetupModal__buttonContainer full-width"
          >
            <div
              className="full-width flex-container align-justify"
            >
              <a
                aria-current="page"
                className="button success hollow active"
                href="/"
                onClick={[Function]}
                style={Object {}}
              >
                hub_setup_modal_button_no
              </a>
              <div
                className="button success hollow"
                onClick={[Function]}
              >
                hub_setup_modal_button_yes
              </div>
            </div>
            <div
              className="flex-container align-center-middle"
            >
              <div
                className="ToggleCheckbox"
                onClick={[Function]}
              >
                <svg
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19 5v14H5V5h14m0-2H5c-1.1 0-2 .9-2 2v14c0 1.1.9 2 2 2h14c1.1 0 2-.9 2-2V5c0-1.1-.9-2-2-2z"
                  />
                </svg>
              </div>
              <div
                className="SetupModal__checkboxText"
                onClick={[Function]}
              >
                hub_setup_modal_button_ask_again
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
  <div
    className="full-height flex-container flex-dir-column"
  >
    <div
      className="flex-child-grow"
    >
      <div>
        <div
          className="row align-center"
        >
          <div
            className="columns small-12 large-10"
          >
            <div
              className="SetupHeader flex-container align-center-middle"
            >
              <img
                src="/app/images/hub/setup/ghosty-human-web.svg"
              />
              <div
                className="SetupHeader__title"
              >
                <h3
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "hub_setup_header_title_humanweb",
                    }
                  }
                />
              </div>
            </div>
          </div>
        </div>
        <div>
          Mock Setup Human Web View
        </div>
      </div>
    </div>
    <div>
      Mock Setup Navigation
    </div>
  </div>
</div>
`;
